<resources>
    <string name="app_name">Actopsy</string>
    <string name="app_id">502685379753466</string>
    <string name="service_name_collect">ActopsyCollectService</string>
    <string name="service_name_upload">ActopsyUploadService</string>
    <string name="title_activity_profile">Actopsy</string>
    <string name="title_activity_quest_qids">Depression (QIDS-SR16)</string>
    <string name="title_activity_quest_altman">Mania (ASRM)</string>
    <string name="title_activity_quest_gad">Anxiety (GAD-7)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_main">Profile</string>
    <string name="menu_quest_qids">Depression (QIDS-SR16)</string>
    <string name="menu_quest_altman">Mania (ASRM)</string>
    <string name="menu_quest_gad">Anxiety (GAD-7)</string>
    <string name="menu_settings">Settings</string>
	<string name="pref_study">Study details</string>
    <string name="pref_personal">Personal details</string>
    <string name="pref_general">General settings</string>
    <string name="pref_server">Servers</string>
	<string name="pref_share_name">Share data</string>
    <string name="pref_share_summary">Help science and upload your activity data to our servers for analysis</string>
    <string name="pref_sampling_title">Sampling rate</string>
    <string name="pref_sampling_summary">SENSOR_DELAY_NORMAL</string>
    <string name="pref_loc_title">Location</string>
    <string name="pref_loc_summary">Collect relative location with origin at the app installation point</string>
    <string name="pref_comm_title">Calls and Texts</string>
    <string name="pref_comm_summary">Collect calls and texts data (content is not collected, all numbers anonymized with MD5 hash)</string>
    <string name="pref_id_name">Your study ID</string>
    <string name="pref_id_summary">You should have know study ID to participate in data collection</string>
	<string name="pref_pass_name">Study password</string>
    <string name="pref_pass_summary">Please enter the password, associated with this ID</string>
    <string name="pref_tc_id_name">True Colours user name</string>
    <string name="pref_tc_id_summary">Please enter your True Colours user name, if you would like to export your activity profile there</string>
    <string name="pref_tc_pass_name">True Colours password</string>
    <string name="pref_tc_pass_summary">Please enter your True Colours password, if you would like to export your activity profile there</string>
    <string name="pref_a_id_name">Actopsy user name</string>
    <string name="pref_a_id_summary">Please enter your Actopsy user name</string>
	<string name="pref_a_pass_name">Actopsy password</string>
    <string name="pref_a_pass_summary">Please enter your Actopsy password</string>
    <string name="pref_usage_title">Phone usage</string>
    <string name="pref_usage_summary">What is your typical mobile phone usage pattern?</string>
	<string name="pref_bday_name">Birth year</string>
    <string name="pref_bday_summary">Please provide your birth year</string>
    <string name="pref_gender_title">Gender</string>
    <string name="pref_gender_summary">Male, female or not specified?</string>
    <string name="pref_occupation_title">Occupation</string>
    <string name="pref_occupation_summary">What do you do?</string>
    <string name="pref_location_name">Location</string>
    <string name="pref_location_summary">Specify your primary geographical location</string>
    <string name="pref_server_raw_name">Raw data server</string>
    <string name="pref_server_raw_summary">Research server URL for raw data upload (IBME)</string>
    <string name="pref_server_tc_name">True Colours server</string>
    <string name="pref_server_tc_summary">Clinical server URL for activity data (NHS)</string>
    <string name="pref_server_actopsy_name">Actopsy server</string>
    <string name="pref_server_actopsy_summary">Actopsy server URL</string>
    <string name="pref_port_actopsy_name">Actopsy port</string>
    <string name="pref_port_actopsy_summary">Actopsy server port</string>
	<string name="mood_irritable">Irritable</string>
	<string name="mood_anxious">Anxious</string>
	<string name="mood_depressed">Depressed</string>
	<string name="mood_elated">Elated</string>
	<string name="mood_energised">Energised</string>
	<string name="mood_bedtime">Bedtime</string>
	<string name="mood_waketime">Waketime</string>
	<string name="spinner_qids1_name">1. Falling asleep</string>
	<string-array name="spinner_qids1_array">
        <item>None selected (touch to answer)</item>
	    <item>0. I never take longer than 30 minutes to fall asleep</item>
        <item>1. I take at least 30 minutes to fall asleep, less than half the time</item>
        <item>2. I take at least 30 minutes to fall asleep, more than half the time</item>
        <item>3. I take more than 60 minutes to fall asleep, more than half the time</item>
    </string-array>
	<string name="spinner_qids2_name">2. Sleep during the night</string>
	<string-array name="spinner_qids2_array">
        <item>None selected (touch to answer)</item>
	    <item>0. I do not wake up at night</item>
        <item>1. I have a restless, light sleep with a few brief awakenings each night</item>
        <item>2. I wake up at least once a night, but I go back to sleep easily</item>
        <item>3. I awaken more than once a night and stay awake for 20 minutes or more, more than half the time</item>
    </string-array>
	<string name="spinner_qids3_name">3. Waking up too early</string>
	<string-array name="spinner_qids3_array">
        <item>None selected (touch to answer)</item>
	    <item>0. Most of the time, I awaken no more than 30 minutes before I need to get up</item>
        <item>1. More than half the time, I awaken more than 30 minutes before I need to get up</item>
        <item>2. I almost always awaken at least one hour or so before I need to, but I go back to sleep eventually</item>
        <item>3. I awaken at least one hour before I need to, and can\'t go back to sleep</item>
    </string-array>
	<string name="spinner_qids4_name">4. Sleeping too much</string>
	<string-array name="spinner_qids4_array">
        <item>None selected (touch to answer)</item>
	    <item>0. I sleep no longer than than 7-8 hours/night, without napping during the day</item>
        <item>1. I sleep no longer than 10 hours in a 24-hour period including naps</item>
        <item>2. I sleep no longer than 12 hours in a 24-hour period including naps</item>
        <item>3. I sleep longer than 12 hours in a 24-hour period including naps</item>
    </string-array>
	<string name="spinner_qids5_name">5. Feeling sad</string>
	<string-array name="spinner_qids5_array">
        <item>None selected (touch to answer)</item>
	    <item>0. I do not feel sad</item>
        <item>1. I feel sad less than half the time</item>
        <item>2. I feel sad more than half the time</item>
        <item>3. I feel sad nearly all of the time</item>
    </string-array>
	<string name="spinner_qids6_name">6. Decreased appetite</string>
	<string-array name="spinner_qids6_array">
        <item>None selected (touch to answer)</item>
	    <item>0. There is no change in my usual appetite</item>
        <item>1. I eat somewhat less often or lesser amounts of food than usual</item>
        <item>2. I eat much less than usual and only with personal effort</item>
        <item>3. I rarely eat within a 24-hour period, and only with extreme personal effort or when others persuade me to eat</item>
    </string-array>
	<string name="spinner_qids7_name">7. Increased appetite</string>
	<string-array name="spinner_qids7_array">
        <item>None selected (touch to answer)</item>
	    <item>0. There is no change in my usual appetite</item>
        <item>1. I feel a need to eat more frequently than usual</item>
        <item>2. I regularly eat more often and / or greater amounts of food than usual</item>
        <item>3. I feel driven to overeat both at mealtime and between meals</item>
    </string-array>
	<string name="spinner_qids8_name">8. Decreased weight (within the last two weeks)</string>
	<string-array name="spinner_qids8_array">
        <item>None selected (touch to answer)</item>
	    <item>0. I have not had a change in my weight</item>
        <item>1. I feel as if I\'ve had a slight weight loss</item>
        <item>2. I have lost 2 pounds or more</item>
        <item>3. I have lost 5 pounds or more</item>
    </string-array>
	<string name="spinner_qids9_name">9. Increased weight (within the last 2 weeks)</string>
	<string-array name="spinner_qids9_array">
        <item>None selected (touch to answer)</item>
	    <item>0. I have not had a change in my weight</item>
        <item>1. I feel as if I\'ve had a slight weight gain</item>
        <item>2. I have gained 2 pounds or more</item>
        <item>3. I have gained 5 pounds or more</item>
    </string-array>
	<string name="spinner_qids10_name">10. Concentration / Decision making</string>
	<string-array name="spinner_qids10_array">
        <item>None selected (touch to answer)</item>
	    <item>0. There is no change in my usual capacity to concentrate of make decisions</item>
        <item>1. I occasionally feel indecisive or find that my attention wanders</item>
        <item>2. Most of the time, I struggle to focus my attention or to make decisions</item>
        <item>3. I cannot concentrate well enough to read or cannot make even minor decisions</item>
    </string-array>
	<string name="spinner_qids11_name">11. View of myself</string>
	<string-array name="spinner_qids11_array">
        <item>None selected (touch to answer)</item>
	    <item>0. I never take longer than 30 minutes to fall asleep</item>
        <item>1. I take at least 30 minutes to fall asleep, less than half the time</item>
        <item>2. I take at least 30 minutes to fall asleep, more than half the time</item>
        <item>3. I take more than 60 minutes to fall asleep, more than half the time</item>
    </string-array>
	<string name="spinner_qids12_name">12. Thoughts of death or suicide</string>
	<string-array name="spinner_qids12_array">
        <item>None selected (touch to answer)</item>
	    <item>0. I do not think of suicide or death</item>
        <item>1. I feel that life is empty or wonder if it\'s worth living</item>
        <item>2. I think of suicide or death several times a week for several minutes</item>
        <item>3. I think of suicide or death several times a day in some detail, or I have made specific plans for suicide or have actually tried to take my life</item>
    </string-array>
	<string name="spinner_qids13_name">13. General interest</string>
	<string-array name="spinner_qids13_array">
        <item>None selected (touch to answer)</item>
	    <item>0. There is no change from usual in how interested I am in other people or activities</item>
        <item>1. I notice that I am less interested in people or activities</item>
        <item>2. I find I have interest in only one or two of my formerly pursued activities</item>
        <item>3. I have virtually no interest in formerly pursued activities</item>
    </string-array>
	<string name="spinner_qids14_name">14. Energy level</string>
	<string name="spinner_qids15_name">15. Feeling slowed down</string>
	<string name="spinner_qids16_name">16. Feeling restless</string>
	<string name="spinner_gad1_name">1. Feeling nervous, anxious or on edge</string>
	<string name="spinner_gad2_name">2. Not being able to stop or control worrying</string>
	<string name="spinner_gad3_name">3. Worrying too much about different things</string>
	<string name="spinner_gad4_name">4. Trouble relaxing</string>
	<string name="spinner_gad5_name">5. Being so restless that its hard to sit still</string>
	<string name="spinner_gad6_name">6. Becoming easily annoyed or irritable</string>
	<string name="spinner_gad7_name">7. Feeling afraid as if something awful might happen</string>
</resources>