<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_profile"
        android:orderInCategory="100"
        android:title="@string/menu_main">
    </item>
    <item
        android:id="@+id/menu_quest_qids"
        android:orderInCategory="200"
        android:title="@string/menu_quest_qids">
    </item>
    <item
        android:id="@+id/menu_quest_altman"
        android:orderInCategory="300"
        android:title="@string/menu_quest_altman">
    </item>
    <item
        android:id="@+id/menu_quest_gad"
        android:orderInCategory="400"
        android:title="@string/menu_quest_gad">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="900"
        android:title="@string/menu_settings">
    </item>
    
</menu>