<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutQuest"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.ibme.android.actopsy.Actopsy" >

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_activity_quest_altman"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewQIDS1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids1_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids1_name" />

            <TextView
                android:id="@+id/textViewQIDS2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids2_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids2_name" />

            <TextView
                android:id="@+id/textViewQIDS3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids3_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids3_name" />

            <TextView
                android:id="@+id/textViewQIDS4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids4_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids4_name" />

            <TextView
                android:id="@+id/textViewQIDS5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids5_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids5_name" />

            <TextView
                android:id="@+id/textViewQIDS6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids6_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids6_name" />

            <TextView
                android:id="@+id/textViewQIDS7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids7_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids8_name" />

            <TextView
                android:id="@+id/textViewQIDS8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids8_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids2_name" />

            <TextView
                android:id="@+id/textViewQIDS9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids9_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids9_name" />

            <TextView
                android:id="@+id/textViewQIDS10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids10_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids10_name" />

            <TextView
                android:id="@+id/textViewQIDS11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids11_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids11_name" />

            <TextView
                android:id="@+id/textViewQIDS12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids12_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids12_name" />

            <TextView
                android:id="@+id/textViewQIDS13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids13_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids13_name" />

            <TextView
                android:id="@+id/textViewQIDS14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids14_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids14_name" />

            <TextView
                android:id="@+id/textViewQIDS15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids15_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids15_name" />

            <TextView
                android:id="@+id/textViewQIDS16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_qids16_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerQIDS16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_qids16_name" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Submit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>