<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutQuest"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.ibme.android.actopsy.Actopsy" >

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_activity_quest_gad"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewGAD1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_gad1_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerGAD1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_gad1_name" />

            <TextView
                android:id="@+id/textViewGAD2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_gad2_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerGAD2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_gad2_name" />

            <TextView
                android:id="@+id/textViewGAD3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_gad3_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerGAD3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_gad3_name" />

            <TextView
                android:id="@+id/textViewGAD4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_gad4_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerGAD4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_gad4_name" />

            <TextView
                android:id="@+id/textViewGAD5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_gad5_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerGAD5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_gad5_name" />

            <TextView
                android:id="@+id/textViewGAD6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_gad6_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerGAD6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_gad6_name" />

            <TextView
                android:id="@+id/textViewGAD7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_gad7_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerGAD7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" 
                android:prompt="@string/spinner_gad7_name" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Submit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>